# ncaaw-to-wnba-success

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
data/: README.md
data/samples/: README.md
docs/: README.md  architecture.md  data_dictionary.md  pipeline.md
scripts/: README.md  build_datasets.py  build_model_frame.py  scrape_herhoops.py  scrape_ncaa_reference.py  scrape_wnba_reference.py  train_model.py
src/ncaaw_stats/: __init__.py  config.py  logging.py
src/ncaaw_stats/data/: __init__.py  io.py  transforms.py
src/ncaaw_stats/modeling/: __init__.py  dataset.py  train.py
src/ncaaw_stats/pipelines/: build_datasets.py
src/ncaaw_stats/scrapers/: __init__.py  herhoops.py  sports_reference.py  wnba_reference.py
src/ncaaw_stats/utils/: http.py  pandas.py
